Fix - CICD pipeline to unlock memory api for arrow flight.